--- a/src/app/frame-work/frame-work.component.scss
+++ b/src/app/frame-work/frame-work.component.scss
@@ -3,7 +3,7 @@
 
 main {
   width: auto;
-  min-height: 82vh;
+  height: 82vh;
   border-radius: $border_s;
   background: url('/assets/imgs/framework/bb.jpg') no-repeat $gray_l;
   background-size: cover;
@@ -11,6 +11,7 @@ main {
   box-shadow: 2px 2px 5px 0px $gray_d;
   margin: 0 $font_05;
   padding: $font_05;
+  overflow-x: auto;
   transition: all ease-in-out 150ms;
 }
 
